--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
       <h2>Jegyvásárlás</h2>
       <p class="section-desc">
         Jelentkezz be vagy regisztrálj, majd töltsd ki az űrlapot. A jegyeidet a
-        <strong>Saját jegyeim</strong> menüpont alatt is meg fogod találni. <strong> FONTOS: Ez a itt csak jegyet foglalsz. A foglalásra emailban fogunk válaszolni. </strong>
+        <strong>Saját jegyeim</strong> menüpont alatt is meg fogod találni. <strong> FONTOS: Itt csak jegyet foglalsz. A foglalásra emailban fogunk válaszolni. </strong>
       </p>
 
       <div id="ticket-auth-info" class="message" hidden></div>
